[build-system]
requires = ["setuptools>=77", "setuptools-scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "download-stripe-invoices"
dynamic = ["version"]
description = "CLI for downloading Stripe invoice PDFs and monthly reports."
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
dependencies = [
    "python-dotenv",
    "pytz",
    "requests",
    "stripe",
    "typer",
]

[project.scripts]
stripe-helper = "download_stripe_invoices.cli:main"

[tool.setuptools.packages.find]
include = ["download_stripe_invoices"]

[tool.setuptools_scm]
